Added second banner version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
       doloribus incidunt odit sint omnis itaque. Ipsum numquam veritatis nemo! Velit, aliquam cumque unde eum nemo porro
       quae magni.</p>
+    <h4>Version1</h4>
     <a href="http://www.transtechsys.com/products">
       <img class="img-fluid" src="./img//worldHighwaysBanner.png" alt="Banner">
     </a>
@@ -24,6 +25,10 @@
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
       doloribus incidunt odit sint omnis itaque. Ipsum numquam veritatis nemo! Velit, aliquam cumque unde eum nemo porro
       quae magni.</p>
+    <h4>Version2</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img//worldHighwaysBanner2.png" alt="Banner2">
+    </a>
     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
       natus eveniet
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
