Added version 3 banner

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
       natus eveniet
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-      doloribus incidunt odit sint omnis itaque. Ipsum numquam veritatis nemo! Velit, aliquam cumque unde eum nemo porro
-      quae magni.</p>
+    </p>
     <h4>Version1</h4>
     <a href="http://www.transtechsys.com/products">
       <img class="img-fluid" src="./img//worldHighwaysBanner.png" alt="Banner">
@@ -23,8 +22,7 @@
     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
       natus eveniet
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-      doloribus incidunt odit sint omnis itaque. Ipsum numquam veritatis nemo! Velit, aliquam cumque unde eum nemo porro
-      quae magni.</p>
+      doloribus </p>
     <h4>Version2</h4>
     <a href="http://www.transtechsys.com/products">
       <img class="img-fluid" src="./img//worldHighwaysBannerVer2.png" alt="Banner2">
@@ -32,8 +30,11 @@
     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
       natus eveniet
       dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-      doloribus incidunt odit sint omnis itaque. Ipsum numquam veritatis nemo! Velit, aliquam cumque unde eum nemo porro
-      quae magni.</p>
+      doloribus</p>
+    <h4>Version3</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img//worldHighwaysBannerVer3.png" alt="Banner3">
+    </a>
   </div>
 </body>
 
