Added bersion 4 and 5

--- a/index.html
+++ b/index.html
@@ -11,29 +11,50 @@
 
 <body>
   <div class="container text-center">
-    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
-      natus eveniet
-      dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-    </p>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
     <h4>Version1</h4>
     <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img//worldHighwaysBanner.png" alt="Banner">
+      <img class="img-fluid" src="./img/worldHighwaysBanner.png" alt="Banner">
     </a>
-    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
-      natus eveniet
-      dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-      doloribus </p>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
     <h4>Version2</h4>
     <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img//worldHighwaysBannerVer2.png" alt="Banner2">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer2.png" alt="Banner2">
     </a>
-    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, consequatur quibusdam? Nulla porro
-      natus eveniet
-      dignissimos, sint fugit rerum ad a earum expedita, eligendi minus, aspernatur minima corrupti sequi molestias? Eos
-      doloribus</p>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
     <h4>Version3</h4>
     <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img//worldHighwaysBannerVer3.png" alt="Banner3">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer3.png" alt="Banner3">
+    </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
+    <h4>Version4</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer4.png" alt="Banner4">
+    </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
+    <h4>Version5</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer5.png" alt="Banner5">
     </a>
   </div>
 </body>
