Added paragraph under last banner for spacing

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <a href="http://www.transtechsys.com/products">
       <img class="img-fluid" src="./img/worldHighwaysBannerVer5.png" alt="Banner5">
     </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
   </div>
 </body>
 
