--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
     <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
       illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
       id!</p>
+
+    <h4>Version6</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer6.png" alt="Banner6">
+    </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
+
+    <h4>Version7</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer7.png" alt="Banner7">
+    </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
   </div>
 </body>
 
