--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
     <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
       illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
       id!</p>
+
+    <h4>Version8</h4>
+    <a href="http://www.transtechsys.com/products">
+      <img class="img-fluid" src="./img/worldHighwaysBannerVer8.png" alt="Banner8">
+    </a>
+
+    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
+      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
+      id!</p>
   </div>
 </body>
 
