Added new designs, updated layout

--- a/index.html
+++ b/index.html
@@ -6,87 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>TransTech Banner</title>
 </head>
 
 <body>
-  <div class="container text-center">
+  <div class="container text-center my-5">
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
+    <h3 class="mb-4">Banners Sent to World Highways</h3>
+    <hr class="mb-5">
 
-    <h4>Version1</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBanner.png" alt="Banner">
+    <h4>Ver-1</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer1.png" alt="Banner1">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version2</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer2.png" alt="Banner2">
+    <h4 class="mt-4">Ver-2</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer2.png" alt="Banner2">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
+    <h3 class="mt-5 mb-4">Alternate Designs</h3>
+    <hr class="mb-5">
 
-    <h4>Version3</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer3.png" alt="Banner3">
+    <h4 class="mt-4">Ver-3</h4>
+    <a href="https://www.youtube.com/watch?v=AxSHIxRzbOI" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer3.png" alt="Banner3">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version4</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer4.png" alt="Banner4">
+    <h4 class="mt-4">Ver-4</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer4.png" alt="Banner4">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version5</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer5.png" alt="Banner5">
+    <h4 class="mt-4">Ver-5</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer5.png" alt="Banner5">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version6</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer6.png" alt="Banner6">
+    <h4 class="mt-4">Ver-6</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer6.png" alt="Banner6">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version7</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer7.png" alt="Banner7">
+    <h4 class="mt-4">Ver-7</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer7.png" alt="Banner7">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
-
-    <h4>Version8</h4>
-    <a href="http://www.transtechsys.com/products">
-      <img class="img-fluid" src="./img/worldHighwaysBannerVer8.png" alt="Banner8">
+    <h4 class="mt-4">Ver-8</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer8.png" alt="Banner8">
     </a>
 
-    <p class="my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio dolorem optio eaque corrupti
-      illo nostrum adipisci sapiente, laborum deserunt, est sequi culpa. Tempora dolorem fugit tenetur illo praesentium
-      id!</p>
+    <h4 class="mt-4">Ver-9</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer9.png" alt="Banner9">
+    </a>
+
   </div>
 </body>
 
