--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </a>
 
     <h4 class="mt-4">Ver-5</h4>
-    <a href="http://www.transtechsys.com/products" target="_blank">
+    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer5.png" alt="Banner5">
     </a>
 
@@ -67,6 +67,11 @@
     <h4 class="mt-4">Ver-10</h4>
     <a href="http://www.transtechsys.com/products" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer10.png" alt="Banner10">
+    </a>
+
+    <h4 class="mt-4">Ver-11</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer11.png" alt="Banner11">
     </a>
 
   </div>
