Added another design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </a>
 
     <h4 class="mt-4">Ver-6</h4>
-    <a href="http://www.transtechsys.com/products" target="_blank">
+    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer6.png" alt="Banner6">
     </a>
 
@@ -72,6 +72,11 @@
     <h4 class="mt-4">Ver-11</h4>
     <a href="http://www.transtechsys.com/products" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer11.png" alt="Banner11">
+    </a>
+
+    <h4 class="mt-4">Ver-12</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer12.png" alt="Banner12">
     </a>
 
   </div>
