--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <hr class="mb-5">
 
     <h4>Ver-1</h4>
-    <a href="http://www.transtechsys.com/products" target="_blank">
+    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer1.png" alt="Banner1">
     </a>
 
     <h4 class="mt-4">Ver-2</h4>
-    <a href="http://www.transtechsys.com/products" target="_blank">
+    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer2.png" alt="Banner2">
     </a>
 
