--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </a>
 
     <h4 class="mt-4">Ver-7</h4>
-    <a href="http://www.transtechsys.com/products" target="_blank">
+    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer7.png" alt="Banner7">
     </a>
 
@@ -77,6 +77,11 @@
     <h4 class="mt-4">Ver-12</h4>
     <a href="http://www.transtechsys.com/products" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer12.png" alt="Banner12">
+    </a>
+
+    <h4 class="mt-4">Ver-13</h4>
+    <a href="http://www.transtechsys.com/products" target="_blank">
+      <img class="img-fluid" src="./img/TransTechSystemsVer13.png" alt="Banner13">
     </a>
 
   </div>
