--- a/index.html
+++ b/index.html
@@ -13,20 +13,41 @@
 <body>
   <div class="container text-center my-5">
 
-    <h3 class="mb-4">Banners Sent to World Highways</h3>
-    <hr class="mb-5">
+    <h1>World Highways Web Banners</h1>
 
-    <h4>Ver-1</h4>
-    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
-      <img class="img-fluid" src="./img/TransTechSystemsVer1.png" alt="Banner1">
-    </a>
+    <section>
+      <h3 class="mb-4">New Size</h3>
+      <hr class="mb-5">
 
-    <h4 class="mt-4">Ver-2</h4>
-    <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
-      <img class="img-fluid" src="./img/TransTechSystemsVer2.png" alt="Banner2">
-    </a>
+      <h4>Ver-1</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctober.png" alt="New Size Banner1">
+      </a>
+      <h5 class='example'><a href="./img/TransTechSystemsNewSizeOctoberExample.png" target='_blank'>Example Placement</a></h5>
 
-    <h3 class="mt-5 mb-4">Alternate Designs</h3>
+      <h4 class="mt-4">Ver-2</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctoberVer2.png" alt="New Size Banner2">
+      </a>
+      <h5 class='example'><a href="./img/TransTechSystemsNewSizeOctoberVer2Example.png" target='_blank'>Example Placement</a></h5>
+    </section>
+
+    <section>
+      <h3 class="mb-4 mt-5">Sent to World Highways (Old Size)</h3>
+      <hr class="mb-5">
+
+      <h4>Ver-1</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsVer1Sent.png" alt="Banner1 Sent">
+      </a>
+
+      <h4 class="mt-4">Ver-2</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsVer7Sent.png" alt="Banner2 Sent">
+      </a>
+    </section>
+
+    <h3 class="mt-5 mb-4">Alternate Designs (Old Size)</h3>
     <hr class="mb-5">
 
     <h4 class="mt-4">Ver-3</h4>
