Added new design

--- a/index.html
+++ b/index.html
@@ -21,18 +21,24 @@
 
       <h4>Ver-1</h4>
       <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
-        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctober.png" alt="New Size Banner1">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeJanuary.png" alt="New Size Banner1">
+      </a>
+      <h5 class='example'><a href="./img/TransTechSystemsNewSizeJanuaryExample.png" target='_blank'>Example Placement</a></h5>
+
+      <h4>Ver-2</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctober.png" alt="New Size Banner2">
       </a>
       <h5 class='example'><a href="./img/TransTechSystemsNewSizeOctoberExample.png" target='_blank'>Example Placement</a></h5>
 
-      <h4 class="mt-4">Ver-2</h4>
+      <h4 class="mt-4">Ver-3</h4>
       <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
-        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctoberVer2.png" alt="New Size Banner2">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctoberVer2.png" alt="New Size Banner3">
       </a>
       <h5 class='example'><a href="./img/TransTechSystemsNewSizeOctoberVer2Example.png" target='_blank'>Example Placement</a></h5>
     </section>
 
-    <section>
+    <!-- <section>
       <h3 class="mb-4 mt-5">Sent to World Highways (Old Size)</h3>
       <hr class="mb-5">
 
@@ -103,7 +109,7 @@
     <h4 class="mt-4">Ver-13</h4>
     <a href="http://www.transtechsys.com/products" target="_blank">
       <img class="img-fluid" src="./img/TransTechSystemsVer13.png" alt="Banner13">
-    </a>
+    </a> -->
 
   </div>
 </body>
