--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       </a>
       <h5 class='example'><a href="./img/TransTechSystemsNewSizeJanuaryExample.png" target='_blank'>Example Placement</a></h5>
 
+      <h4>Ver-1</h4>
+      <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
+        <img class="img-fluid" src="./img/TransTechSystemsNewSizeJanuaryVer2.png" alt="New Size Banner2">
+      </a>
+      <h5 class='example'><a href="./img/TransTechSystemsNewSizeJanuaryVer2Example.png" target='_blank'>Example Placement</a></h5>
+
       <h4>Ver-2</h4>
       <a href="http://www.transtechsys.com/products/pqi380" target="_blank">
         <img class="img-fluid" src="./img/TransTechSystemsNewSizeOctober.png" alt="New Size Banner2">
